fix: adjust card scss for better layout and spacing

--- a/frontend/src/styles/components/_card.scss
+++ b/frontend/src/styles/components/_card.scss
@@ -8,9 +8,9 @@
   width: 334px;
   display: flex;
   flex-flow: column nowrap;
-  gap: 1.125rem;
   border-radius: 10px;
-  padding: 3em 2em;
+  margin-bottom: 1.125rem;
+  padding: 2em;
   background-color: white;
   box-shadow: $shadow-main;
 
